--- a/hangarinsite/requirements.txt
+++ b/hangarinsite/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.4
 cryptography==46.0.3
 Django==5.2.7
 django-allauth==65.12.1
+django-pwa==2.0.1
 django-widget-tweaks==1.5.0
 Faker==37.11.0
 idna==3.11
